Updated polymer imports

--- a/demo-element.html
+++ b/demo-element.html
@@ -1,4 +1,4 @@
-<link rel="import" href="bower_components/polymer/polymer.html"> 
+<link rel="import" href="../polymer/polymer.html"> 
 <link rel="import" href="pubnub-element.html">
 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 
