--- a/demo.html
+++ b/demo.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>pubnub-element Demo/Testing</title>
 
-  <script src="bower_components/platform/platform.js"></script>
-  <link rel="import" href="pubnub-element.html" publish_key subscribe_key auth_key uuid cipher_key noleave keepalive secret_key ssl windwoing jsonp>
+  <script src="../platform/platform.js"></script>
+  <link rel="import" href="pubnub-element.html">
   <link rel="import" href="demo-element.html"> 
 
 
