--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -1,4 +1,4 @@
-<link rel="import" href="bower_components/polymer/polymer.html"> 
+<link rel="import" href="../polymer/polymer.html"> 
 
 <!--
 This element initializes the PubNub client. This element must be created before attempting to utilize any other PubNub Polymer elements in order to establih account level credentials such as `publish_key` and `subscribe_key`, set `origin` server as well as any optional configurations such as `uuid`.
