--- a/demo.html
+++ b/demo.html
@@ -5,13 +5,13 @@
   <title>pubnub-element Demo/Testing</title>
 
   <script src="../platform/platform.js"></script>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="import" href="pubnub-element.html">
   <link rel="import" href="demo-element.html"> 
 
 
 </head>
 <body >
-<h1>TESTING</h1><hr><hr>
 <!--  
   <core-pubnub publish_key="demo" subscribe_key="demo" id="core">
   <core-pubnub-subscribe channel="what" id="sub">
@@ -24,6 +24,46 @@
     </core-pubnub-history>
   </core-pubnub>
 -->
+<div class="container">
+<h1>PubNub Polymer Demo</h1><hr>
+<div class="row">
+    <div class="col-md-8">
+      <h1>core-pubnub-subscribe</h1>
+    <div class="col-md-6">
+      <h1>Messages</h1>
+<div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading">Panel heading</div>
+  <div class="panel-body">
+    <p>...</p>
+  </div>
+
+  <!-- List group -->
+  <ul class="list-group">
+    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Dapibus ac facilisis in</li>
+    <li class="list-group-item">Morbi leo risus</li>
+    <li class="list-group-item">Porta ac consectetur ac</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+  </ul>
+</div>
+    </div>
+    <div class="col-md-6">
+      <h1>Presence</h1>
+    </div>
+  </div>
+    <div class="col-md-4">
+      <h1>core-pubnub-publish</h1>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-md-4">History</div>
+    <div class="col-md-4">Here Now</div>
+    <div class="col-md-4">Where Now</div>
+</div>
+  <div clas="row">
   <list-data></list-data>
+</div>
 </body>
 </html>
