Renamed old demo element

--- a/old-demo.html
+++ b/old-demo.html
@@ -6,7 +6,7 @@
 
   <script src="../platform/platform.js"></script>
   <link rel="import" href="pubnub-element.html">
-  <link rel="import" href="demo-element.html"> 
+  <link rel="import" href="old-demo-element.html"> 
 
 
 </head>
