--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
   <script src="../platform/platform.js"></script>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="import" href="pubnub-element.html">
-  <link rel="import" href="demo-element.html"> 
+  <link rel="import" href="old-demo-element.html"> 
 
 
 </head>
