Some more updates in the new demo

--- a/demo.html
+++ b/demo.html
@@ -28,9 +28,9 @@
 <h1>PubNub Polymer Demo</h1><hr>
 <div class="row">
     <div class="col-md-8">
-      <h1>core-pubnub-subscribe</h1>
+      <h2> <a href="./#core-pubnub-subscribe">&lt;core-pubnub-subscribe&gt; </a> </h2>
     <div class="col-md-6">
-      <h1>Messages</h1>
+      <h2>Messages</h2>
 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-heading">Panel heading</div>
@@ -49,11 +49,11 @@
 </div>
     </div>
     <div class="col-md-6">
-      <h1>Presence</h1>
+      <h2>Presence</h2>
     </div>
   </div>
     <div class="col-md-4">
-      <h1>core-pubnub-publish</h1>
+      <h2> <a href="./#core-pubnub-publish" >&lt;core-pubnub-publish&gt; </a> </h2>
     </div>
   </div>
   <hr>
@@ -61,9 +61,6 @@
     <div class="col-md-4">History</div>
     <div class="col-md-4">Here Now</div>
     <div class="col-md-4">Where Now</div>
-</div>
-  <div clas="row">
-  <list-data></list-data>
 </div>
 </body>
 </html>
