--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -535,6 +535,14 @@ PubNub Storage/Playback Service provides real-time access to an unlimited histor
   <script>
     Polymer('core-pubnub-history', {
       /**
+        * The `history` attribute contains the result of the `history` call.
+        *
+        * @attribute history
+        * @type Array
+        * @default []
+        */
+
+      /**
         * The `channel` attribute specifies the channel to return history messages from.
         *
         * **REQUIRED**
