--- a/demo-element.html
+++ b/demo-element.html
@@ -8,7 +8,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">{{heading}}</div>
 
-      <ul class="list-group">
+      <ul class="list-group" style="max-height: 500px; overflow: auto;">
       <template repeat="{{ datum in data }}">
         <li class="list-group-item">{{datum}}</li>
       </template>
